# Aurora-discord

./: .gitignore  .style.yapf  .yapfignore  LICENSE  README.md  docker-compose.yml  mypy.ini
.github/workflows/: codeql-analysis.yml  deploy.yml  formatter.yml
Bot/: Aurora.py  Dockerfile  main.py  pyproject.toml
Bot/Cogs/: Admin.py  Config.py  Help.py  Info.py  Music.py  Owner.py  User.py  Utility.py
Bot/Cogs/Events/: on_command_completion.py  on_error.py  on_member.py  on_message.py  on_ready.py
Bot/Utils/: Database.py  Player.py  Utilidades.py  View.py  __init__.py
Bot/Utils/pomice/: __init__.py  enums.py  events.py  filters.py  objects.py  player.py  pool.py  utils.py
Bot/Utils/pomice/spotify/: __init__.py  album.py  client.py  playlist.py  track.py
