[tool.poetry]
name = "aurorapython"
version = "1.8.5"
description = "Aurora Bot"
authors = ["Eduardo <rodrigueseduardo1966@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
disnake-jishaku = "2.6.5"
psutil = "5.7.0"
python-dateutil = "2.8.0"
python-dotenv = "0.10.0"
pytz = "2020.1"
asyncpg = "0.25.0"
prettytable = "0.7.2"
tabulate = "0.8.7"
firebase_admin = "5.1.0"
"stopwatch.py" = "^1.0.1"
humanize = "^3.13.1"
disnake = {git = "https://github.com/DisnakeDev/disnake.git", rev = "master"}
paramiko = "^2.9.1"
Pillow = "^9.0.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
py_version = "310"

[tool.mypy]
python_version = "3.10"
namespace_packages = "True"

[tool.yapf]
based_on_style = "facebook"
indent_width = 4

[tool.yapfignore]
ignore_patterns = [
    "Utils/pomice/events.py",
]